# a-evolve

./: .gitignore  README.md  pyproject.toml
agent_evolve/: api.py
agent_evolve/agents/arc/: agent.py  bedrock_agent.py  bedrock_prompts.py  bedrock_tools.py  colors.py  frame.py  grid_render.py  mas_agent.py  orchestrator.py  repl.py  wiki.py
agent_evolve/agents/mcp/: agent.py  docker_env.py
agent_evolve/agents/mcp_mh/: __init__.py  agent.py
agent_evolve/agents/skillbench/: __init__.py  agent.py  cli.py  dataset.py  evolver.py  paths.py  repo.py
agent_evolve/algorithms/: __init__.py
agent_evolve/algorithms/gepa/: evaluator.py
agent_evolve/algorithms/meta_harness/: __init__.py  engine.py  (+1 more)
agent_evolve/contract/: workspace.py
agent_evolve/protocol/: base_agent.py
artifacts/mcp_mh_opus46/: REPORT.md  baseline_eval_5trials.json  final_eval_5trials.json  harness.py  results.json
docs/: skillbench-setup.md
docs/algorithms/: gepa.md  guided-synth.md  skillforge.md
examples/arc_examples/: eval_mas.py  mas_dashboard.html  play_ls20.py  serve_mas_dashboard.py  submit_competition.py
examples/configs/: metaharness_mcp.yaml
examples/mcp_examples/: run_final_eval.py  run_metaharness.py  run_metaharness.sh
examples/skillbench_examples/: run_skillbench_evolve_in_situ_cycle.sh  run_skillbench_solve_all.sh  skillbench_evolve_in_situ_cycle.py  skillbench_solve_one.py
seed_workspaces/arc-mas/: manifest.yaml
seed_workspaces/mcp_mh/: CLAUDE.md  harness.py  manifest.yaml
tests/: test_mas_agent.py  test_skillbench_setup.py
tests/gepa/: test_evaluator.py
(+18 files in other folders)
