[project]
name = "agent-evolve"
version = "0.1.0"
description = "Evolve any agent through a file system contract"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pyyaml>=6.0",
    "swebench>=4.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
bedrock = ["boto3>=1.34"]
litellm = ["litellm>=1.0.0"]
swe = ["strands-agents>=0.1.0", "datasets>=4.5.0", "boto3>=1.34", "swebench>=3.0.0"]
mcp = ["mcp>=1.0.0", "strands-agents>=0.1.0", "datasets>=4.5.0", "boto3>=1.34", "litellm>=1.0.0"]
skillbench = ["strands-agents>=0.1.0", "boto3>=1.34"]
all = ["anthropic>=0.30", "openai>=1.30", "boto3>=1.34", "datasets>=4.5.0", "strands-agents>=0.1.0", "mcp>=1.0.0", "litellm>=1.0.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "hypothesis>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_evolve"]

[tool.hatch.build.targets.wheel.force-include]
"seed_workspaces" = "seed_workspaces"

[tool.hatch.build.targets.sdist]
include = [
    "/agent_evolve",
    "/docs",
    "/examples",
    "/README.md",
    "/seed_workspaces",
]

[tool.ruff]
target-version = "py311"
line-length = 100
